--- a/app/src/main/res/layout/qr_reader.xml
+++ b/app/src/main/res/layout/qr_reader.xml
@@ -13,17 +13,21 @@
         android:layout_height="480dp" />
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="30dp"
+        android:layout_width="416dp"
+        android:layout_height="214dp"
+        android:layout_marginTop="28dp"
         android:gravity="center_horizontal"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/cameraSurfaceView">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cameraSurfaceView"
+        tools:layout_editor_absoluteX="1dp">
 
         <EditText
             android:id="@+id/codeInput"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="0dp"
             android:ems="10"
             android:inputType="textPersonName" />
 
@@ -31,7 +35,7 @@
             android:id="@+id/searchButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toEndOf="@+id/codeInput"
+            android:layout_alignParentEnd="true"
             android:layout_toRightOf="@+id/codeInput"
             android:text="Buscar"
             tools:ignore="HardcodedText" />
@@ -41,9 +45,32 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/codeInput"
-            android:layout_marginTop="10dp"
-            android:text=""
-            android:textSize="18sp" />
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="30dp"
+            android:text="Terminal Aleatorio"
+            android:textSize="18sp"
+            android:visibility="invisible" />
+
+        <Button
+            android:id="@+id/buttonSend"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/resultText"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="-1dp"
+            android:text="Enviar"
+            android:visibility="invisible" />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/codeInput"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
+            android:visibility="invisible" />
 
     </RelativeLayout>
 
