--- a/app/src/main/res/layout/qr_reader.xml
+++ b/app/src/main/res/layout/qr_reader.xml
@@ -13,14 +13,16 @@
         android:layout_height="480dp" />
 
     <RelativeLayout
+        android:id="@+id/containerInfoItem"
         android:layout_width="416dp"
         android:layout_height="214dp"
         android:layout_marginTop="28dp"
         android:gravity="center_horizontal"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cameraSurfaceView"
-        tools:layout_editor_absoluteX="1dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cameraSurfaceView">
 
         <EditText
             android:id="@+id/codeInput"
@@ -29,6 +31,7 @@
             android:layout_alignParentStart="true"
             android:layout_marginStart="0dp"
             android:ems="10"
+            android:importantForAutofill="no"
             android:inputType="textPersonName" />
 
         <Button
@@ -47,6 +50,8 @@
             android:layout_below="@id/codeInput"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="30dp"
+            android:autoSizeTextType="uniform"
+            android:singleLine="false"
             android:text="Terminal Aleatorio"
             android:textSize="18sp"
             android:visibility="invisible" />
