--- a/app/src/main/res/drawable/bgr.xml
+++ b/app/src/main/res/drawable/bgr.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
 
-    <solid android:color="#939393" />
+    <solid android:color="#EFEFEF" />
 
     <stroke
         android:width="2dp"
