--- a/app/src/main/res/layout/request_order.xml
+++ b/app/src/main/res/layout/request_order.xml
@@ -24,9 +24,14 @@
             android:id="@+id/btnMoreFields"
             android:layout_width="60dp"
             android:layout_height="50dp"
+            android:layout_marginEnd="10dp"
+            android:background="@android:color/transparent"
+            android:scaleType="fitXY"
+            android:scaleX="-0.8"
+            android:scaleY="-0.8"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/usedByField"
-            app:srcCompat="@android:drawable/btn_plus" />
+            app:srcCompat="@drawable/ic_adicionar" />
 
         <EditText
             android:id="@+id/usedByField"
